# osgEarthOpenDrive

./: CMakeLists.txt  README.md  simple.earth
src/common/: convertMapCoords.cpp  convertMapCoords.h  osgLod.h
src/covise/: CMakeLists.txt  README.md  convertMapCoordsWrapper.h
src/covise/OpenCRGPlugin/: OpenCRGPlugin.cpp  OpenCRGPlugin.h
src/covise/RoadSystem/: Crosswalk.h  Element.h  Fiddleyard.h  Junction.h  Lane.h  LaneSection.h  OpenCRGSurface.cpp  Road.cpp  Road.h  RoadObject.cpp  RoadObject.h  RoadSignal.cpp  RoadSurface.cpp  RoadSurface.h  RoadSystem.cpp  RoadSystem.h  RoadSystemVisitor.h  Types.h
src/covise/RoadSystem/opencrg/: crgSurface.cpp
src/covise/RoadTerrain/: DecoratedGeometryTechnique.cpp  LevelTerrainCallback.cpp  LevelTerrainCallback.h  RoadTerrainLoader.cpp  RoadTerrainLoader.h
src/covise/cover/: coVRConfig.cpp  coVRConfig.h  coVRFileManager.cpp  coVRFileManager.h  fasi.cpp  fasi.h
src/covise/cover/util/: coExport.h
src/esMini/: CommonMini.cpp  CommonMini.hpp  RoadManager.cpp  RoadManager.hpp  osgColorUtils.h  roadgeom.cpp  roadgeom.hpp  version.cpp
src/oe/: ElevationSampler  ElevationSampler.cpp  FlatteningLayerAlternative  FlatteningLayerAlternative.cpp  ODRFeatureSource  ODRFeatureSource.cpp  osgEarthImGUI.cpp  osgEarthStuff.cpp  osgEarthStuff.h
